docs/.vuepress/theme/assets/less/hljs-dialpad.less
div[class*=language-] {
  padding: var(--su8);
  border-radius: var(--su8);
  background-color: hsla(var(--black-600-h) var(--black-600-s) var(--black-600-l) ~' / ' var(--bgo));

  pre {
    padding: 1em !important;
    margin: 0 !important;

    code {
      background-color: unset;
      color: var(--black-200) !important;
    }
  }

  &[class*=jsx] {
    background: inherit;
  }

  &[class*=html] {
    border-radius: 0 0 6px 6px !important;
    margin-top: var(--sun4) !important;
  }
}

code {
  --bgo: 50% !important;
  background-color: var(--purple-100);
  color: var(--purple-400);
  padding: var(--su2) var(--su4);
}

